tdf#161073 handle is supposed to be freed automatically on failure

and is since:
https://gitlab.gnome.org/GNOME/glib/-/commit/747e3af9987b37847d7d5acbf882d1ee4a6bd91b

Change-Id: Ibb648ccf69ff892fc1e2a3c3dc4da1fffd577c92
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167468
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
Tested-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>